--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 this is first line before addiong
 this is added locally after pulling from website
+this is added after checking out to br1 for adding, commiting and pull request creating
