--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ this is added locally after pulling from website
 this is added after checking out to br1 for adding, commiting and pull request creating
 
 ab m new branch bna k reviews lena chahta hu
+NOW THIS IS BEING ADDED IN FEATURE 3 BRANCH
