--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 this is first line before addiong
 this is added locally after pulling from website
 this is added after checking out to br1 for adding, commiting and pull request creating
+so this is going 1 commit ahead of master
